Bug 1227492 - Scroll to visible position when navigating to an app

--- a/src/media/css/app-list.styl
+++ b/src/media/css/app-list.styl
@@ -18,12 +18,12 @@ $app-list-background-color = #CBCDCD;
     background-color: $app-list-background-color;
 
     ul {
-        padding: 6rem 11.6rem .2rem;
+        padding: 3.1rem 11.6rem;
     }
 
     li {
         float: left;
-        margin: 0 2.6rem 5.8rem;
+        margin: 2.9rem 2.6rem;
 
         list-style: none;
     }
